--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "author": "Nikolay Slivinskiy (q.s-n@yandex.ru)",
   "license": "MIT",
   "scripts": {
-    "build": "npx webpack --config ./config/webpack.config.js",
-    "watch": "webpack --watch"
+    "build": "npx webpack --config ./config/webpack.config.js"
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
@@ -19,6 +18,7 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.1.1",
     "html-webpack-plugin": "^3.2.0",
     "module-to-cdn": "^3.1.5",
     "webpack": "^4.41.6",
