--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,12 +1,12 @@
 {
-  "name": "Getting Started Example1",
+  "name": "Yandex music voice assistant",
   "version": "1.1",
-  "description": "Build an Extension1!",
+  "description": "Звуковое управление для сервиса Яндекс Музыка",
   "background": {
     "scripts": [
-      "index.js"
+      "background.js"
     ],
-    "persistent": false
+    "persistent": true
   },
   "content_scripts": [
     {
